fix dark mode

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,6 +11,8 @@
     --color-room-active: #FFDC00;
     --color-tool-inactive: var(--color-subtle);
     --color-tool-active: #0074D9;
+
+    --fade-out-gradient: linear-gradient(rgba(17, 17, 17, 0), rgba(17, 17, 17, 1.0))
 }
 /* @media (prefers-color-scheme: light) { */
 /*     :root { */
